--- a/YantraSupport.html
+++ b/YantraSupport.html
@@ -41,7 +41,7 @@ word-break: break-all;
 <h3>Need Help?</h3>
 <p>If you have any questions, issues, or feedback, please feel free to contact our support team.</p>
 
-<p><strong>Email:</strong> <a class="email" href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+<p><strong>Email:</strong> <a class="email" href="mailto:info@innovapoint.com">support@yourdomain.com</a></p>
 
 <h3>Frequently Asked Questions:</h3>
 <ul>
